Fix layout issues with new structure

--- a/assets/scss/atom/_stage.scss
+++ b/assets/scss/atom/_stage.scss
@@ -11,7 +11,7 @@
     }
 
     .gluggi-stage-window {
-        max-height: 100%;
+        height: 100%;
         overflow-y: auto;
     }
 
